# advanture_game

./: .gitignore  1234.ipynb  AI2_GIT_COMMIT_GUIDE.md  Form - untitled  README.md  auto_commit_ai2.sh  commit_ai2.sh  create_item.ipynb  main.py  main2.py  main3.py  pyproject.toml  temp.ipynb  temp.py
UI/: inventory_ui.py  item_view_ui.py  load_game_ui.py  main_menu_ui.py  new_game_ui.py  options.py  start.py  start_main_ui.py  start_main_ui2.py
aaaaa/: create_item.ipynb  main.py  tempCodeRunnerFile.py
ad2/: README.md  folder_structure.txt  main.py
ai/: base_prompt.py  fine_tune.py  fine_tune_to_llm.py  multi_npc_manager.py  npc_inference.py  npc_training.py  promt_tunning.py  rule_based_questionnaire.py  test.py  test_fine.py  test_prompt.py  tune2.py
ai2/: README.md  __init__.py  ai_bridge.py  data_processor.py  extended_data_generator.py  fine_tuner.py  generate_data.py  main.py  requirements.txt  session_manager.py  updated_start_main_ui.py
ai3/: brain_chat.py  dynamicdataset.py  fine_tune.py  fine_tune2.py  fine_tune_npc.py  fine_tune_to_llm.py  god_brain.py  npc_chat.py  promt_tunning.py  test_fine.py  tune2.py
data/: item_data.py  quest.py  save_load.py
datas/: theme.json
develop_logs/: 0501 logs 01.md  0501-logs_01.md  0502 logs 02.md  0507 logs 03.md  0514 logs 03 copy.md  0514 logs 03.md  0516 logs 05.md  0519 logs 06.md  0520 logs 07.md  0521 logs 08.md  0522 logs 09.md  0526 logs 10.md
display/: display_select.py
entity/: armor.py  consum.py  item.py  money.py
functions/: show_inventory_items.py
game/: main_game.py  main_system.py
(+78 files in other folders)
