[project]
name = "advanture-game2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "pyside6>=6.9.0",
    "transformers>=4.52.1",
    "trl>=0.17.0",
]
